--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
+    "clsx": "^2.1.1",
     "expo": "~52.0.43",
+    "expo-asset": "^11.0.5",
     "expo-constants": "~17.0.8",
     "expo-dev-client": "~5.0.19",
     "expo-file-system": "~18.0.12",
     "expo-font": "~13.0.4",
     "expo-image": "~2.0.7",
+    "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
@@ -36,10 +39,12 @@
     "react-native-gesture-handler": "^2.25.0",
     "react-native-reanimated": "3.16.2",
     "react-native-root-siblings": "^5.0.1",
+    "react-native-root-toast": "^4.0.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "^13.13.5",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "3.4.17"
   },
   "devDependencies": {
