--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
+    "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "expo": "~52.0.43",
     "expo-asset": "^11.0.5",
