--- a/.eas/workflows/eas.yml
+++ b/.eas/workflows/eas.yml
@@ -17,7 +17,7 @@ jobs:
   ios_production:
     name: 🛠 iOS Production
     type: build
-    if: $EAS_BRANCH == "main"
+    if: ${{ github.ref_name == 'main' }}
     params:
       platform: ios
       profile: production
@@ -25,7 +25,7 @@ jobs:
   ios_preview:
     name: 🔍 iOS Preview
     type: build
-    if: $EAS_BRANCH == "staging"
+    if: ${{ github.ref_name == 'staging' }}
     params:
       platform: ios
       profile: preview
@@ -33,7 +33,7 @@ jobs:
   ios_development:
     name: 🧪 iOS Development
     type: build
-    if: $EAS_BRANCH == "develop"
+    if: ${{ github.ref_name == 'develop' }}
     params:
       platform: ios
       profile: ios-simulator
@@ -42,7 +42,7 @@ jobs:
   android_production:
     name: 🛠 Android Production
     type: build
-    if: $EAS_BRANCH == "main"
+    if: ${{ github.ref_name == 'main' }}
     params:
       platform: android
       profile: production
@@ -50,7 +50,7 @@ jobs:
   android_preview:
     name: 🔍 Android Preview
     type: build
-    if: $EAS_BRANCH == "staging"
+    if: ${{ github.ref_name == 'staging' }}
     params:
       platform: android
       profile: preview
@@ -58,7 +58,7 @@ jobs:
   android_development:
     name: 🧪 Android Development
     type: build
-    if: $EAS_BRANCH == "develop"
+    if: ${{ github.ref_name == 'develop' }}
     params:
       platform: android
       profile: development
