--- a/.eas/workflows/preview_build.yml
+++ b/.eas/workflows/preview_build.yml
@@ -5,12 +5,12 @@ on:
     branches: ["staging"]
 
 jobs:
-  # ios_preview:
-  #   name: 🔍 iOS Preview
-  #   type: build
-  #   params:
-  #     platform: ios
-  #     profile: preview
+  ios_preview:
+    name: 🔍 iOS Preview
+    type: build
+    params:
+      platform: ios
+      profile: preview
 
   android_preview:
     name: 🔍 Android Preview
